# coriander

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.REAL  README.md  TODO  acconfig.h  cleanup_sources  configure.in  coriander.glade  coriander.gladep  edit_sources
macros/: Makefile.am  coriander_macros.m4  gnome-x-checks.m4  gnome.m4
pixmaps/: coriander_big.xpm  coriander_logo.xpm
po/: .gitignore  ChangeLog  Makefile.in.in  cat-id-tbl.c  coriander.pot
src/: Display.txt  GetFormat7Capabilities.c  Makefile.am  RealErrorSink.cc  RealErrorSink.h  RealGuids.h  SDLEvent.c  SDLEvent.h  bayer.c  bayer.h  build_frames.c  build_frames.h  build_menus.c  build_menus.h  build_ranges.c  build_ranges.h  build_windows.c  build_windows.h  callback_proc.c  callback_proc.h  callbacks.c  callbacks.h  camera.c  camera.h  capture.c  capture.h  conversions.c  conversions.h  coriander.h  definitions.c  definitions.h  error.c  error.h  icons.h  interface.c  interface.h  interface.mods  interface.patch  main.c  preferences.c  (+36 more)
