dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(coriander, 0.27.1)
AM_CONFIG_HEADER(config.h)


dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Add the languages which your application supports here.
dnl ALL_LINGUAS=""
dnl AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

# CUSTOM CHECKS    ###########################################################
AC_CHECK_MMX
AC_CHECK_SSE
AC_CHECK_SSE2
AC_CHECK_LIBRAW
AC_CHECK_LIBRAW_VERSION
AC_CHECK_LIBDC
AC_CHECK_LIBDC_VERSION
AC_CHECK_FTPLIB
AC_CHECK_SDLLIB
AC_CHECK_REALLIB

dnl temporarily removed intl/Makefile and po/Makefile.in
AC_OUTPUT([
Makefile
macros/Makefile
src/Makefile
])

