dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(coriander, 1.0.1)
AM_CONFIG_HEADER(config.h)


dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Add the languages which your application supports here.
dnl ALL_LINGUAS=""
dnl AM_GNU_GETTEXT

# CUSTOM CHECKS    ###########################################################
AC_CHECK_LFS
AC_CHECK_GDK_PIXBUF
AC_CHECK_XV
AC_CHECK_MMX
AC_CHECK_SSE
AC_CHECK_SSE2
AC_CHECK_LIBRAW
AC_CHECK_LIBRAW_VERSION
AC_CHECK_LIBDC
AC_CHECK_LIBDC_VERSION_COMPILE
AC_CHECK_LIBDC_VERSION_FUNCTION
AC_CHECK_FTPLIB
AC_CHECK_SDLLIB

dnl Set PACKAGE_LOCALE_DIR in config.h.
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, DATADIR "/locale", [locales dir])

dnl Subst PACKAGE_PIXMAPS_DIR.
if test "x${prefix}" = "xNONE"; then
  PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
else
  PACKAGE_PIXMAPS_DIR="${datadir}/pixmaps/${PACKAGE}"
fi
AC_SUBST(PACKAGE_PIXMAPS_DIR)


dnl temporarily removed intl/Makefile and po/Makefile.in
AC_OUTPUT([
Makefile
macros/Makefile
src/Makefile
])

